--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,13 +6,14 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <input type="text" id="urlForm">
-    <input type="submit" value="">
+    <p>Welcome to <%= title %>, please enter URL to proxy</p>
+    <input type="text" id="urlForm"><br>
+    <input type="submit" value="Submit!" class="btn btn-danger">
     <script>
       document.onsubmit = () =>{
         document.URL("https://unbl0ker.herokuapp.com/proxy/" + document.getElementById("urlForm").value)
       }
     </script>
+    <footer>Made by wildsir with <a href="https://github.com/nfriedly/node-unblocker">node-unblocker</a>. Find the source code at <a href="https://github.com/mrchilliballs/unbl0ker">https://github.com/mrchilliballs/unbl0ker</a></footer>
   </body>
 </html>
