another commit I know lol

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <input type="submit" value="Submit!" class="btn btn-danger">
     <script>
       document.onsubmit = () =>{
-        document.URL("https://unbl0ker.herokuapp.com/proxy/" + document.getElementById("urlForm").value)
+        window.location.href = "https://unbl0ker.herokuapp.com/proxy/" + document.getElementById("urlForm").value;
       }
     </script>
     <footer>Made by wildsir with <a href="https://github.com/nfriedly/node-unblocker">node-unblocker</a>. Find the source code at <a href="https://github.com/mrchilliballs/unbl0ker">https://github.com/mrchilliballs/unbl0ker</a></footer>
