--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,9 +12,8 @@
     <input type="text" id="urlForm"><br>
     <input type="submit" value="Submit!" class="btn btn-danger">
     <script>
-      document.body.addEventListener("submit"){
-        window.location.href = "https://unbl0ker.herokuapp.com/proxy/" + document.getElementById("urlForm").value;
-      }
+      document.body.addEventListener("submit", ()=>{window.location.href = "https://unbl0ker.herokuapp.com/proxy/" + document.getElementById("urlForm").value;})
+
     </script>
     <footer>Made by wildsir with <a href="https://github.com/nfriedly/node-unblocker">node-unblocker</a>. Find the source code at <a href="https://github.com/mrchilliballs/unbl0ker">https://github.com/mrchilliballs/unbl0ker</a></footer>
   </body>
